# camerahub

./: .dockerignore  .gitignore  .pylintrc  .travis.yml  .yamllint.yml  Dockerfile  MANIFEST.in  README.md  camerahub-0.10.35.tgz  ct.yaml  dashboard.py  entrypoint.sh  index.yaml  kustomization.yaml  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  uwsgi.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: checks.yml  django.yml  publish-charts.yml  publish-dev.yml  publish.yml  release.yml  test-charts.yml  test.yml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  random_seed  trustdb.gpg
.gitsecret/paths/: mapping.cfg
accounts/: forms.py  urls.py  views.py
api/: apps.py  rwserializers.py  serializers.py  urls.py  views.py
app/: __init__.py  urls.py  views.py
camerahub/: __init__.py  asgi.py  middleware.py  settings.py  urls.py  wsgi.py
charts/camerahub/: Chart.yaml  values.yaml
charts/camerahub/charts/: postgresql-ha-6.3.6.tgz
charts/camerahub/ci/: kind-values.yaml
charts/camerahub/templates/: NOTES.txt  _helpers.tpl  config.yaml  cronjob.yaml  deployment.yaml  ingress.yaml  job.yaml  metrics.yaml  pvc.yaml  secret.yaml  static-deployment.yaml  static-service.yaml
docs/: API.md  CHANGELOG.md  CONCEPTS.md  CONTRIBUTING.md  ICONS.md  INSTALL-DOCKER.md  INSTALL-KUBERNETES.md  INSTALL-SOURCE.md  OPS.md  SCREENSHOTS.md  about.md  about.rst  concepts.md  concepts.rst  condition.md  condition.rst  conf.py  development.rst  faq.md  faq.rst  guides.rst  index.md  index.rst  operations.rst  ops.rst
docs.old/: INSTALL-DOCKER.md  INSTALL-KUBERNETES.md
docs/development/: api.md  api.rst  contributing.md  contributing.rst  icons.md  icons.rst  index.md
docs/guides/: cameracollecting.md  cameracollecting.rst  filmshooting.md  filmshooting.rst  index.md
docs/installation/: docker.rst  kubernetes.rst  source.rst
docs/operations/: backup.md  backup.rst  docker.md  index.md  kubernetes.md  kubernetes.rst  source.md  source.rst
helm/camerahub/: Chart.yaml  values.yaml
helm/camerahub/templates/: config.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
help/: urls.py  views.py
help/templates/: about.html  api.html  camera-workflow.html  concepts.html  condition.html  faq.html  film-workflow.html  index.html
icons/: generate-icons.pl
iommiui/: apps.py  urls.py
kubernetes/: deployment.apps_photodb.yaml  kustomization.yaml  persistentvolumeclaim_photodb.yaml  photodb.yaml  postgres.yaml  service_photodb.yaml
kubernetes/kustomize/: camerahub-config.env.example  camerahub-config.env.secret  camerahub-secret.env.example  camerahub-secret.env.secret  camerahub.env.secret  kustomization.yaml
kubernetes/kustomize/camerahub/: batch.yaml  configmap.yaml  deployment.yaml  ingress.yaml  job.yaml  kustomization.yaml  pvc.yaml  secret.yaml  service.yaml
kubernetes/kustomize/photodb/: batch.yaml  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
kubernetes/overlays/: kustomization.yaml  overlay.yaml
kubernetes/photodb/: batch.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml
kubernetes/postgres/: kustomization.yaml
photodb/: dashboard.py  local_settings.py.template  menu.py  settings.py  urls.py  wsgi.py
schema/: __init__.py  actions.py  admin.py  apps.py  filters.py  formhelpers.py  forms.py  funcs.py  models.py  moderator.py  tables.py  tags.py  urls.py  views.py
schema/fixtures/: Condition.json  Filmstock.json  Format.json  Manufacturer.json  MeteringMode.json  Mount.json  NegativeSize.json  Process.json  ShutterSpeed.json  exposureprogram.json  filmstock.json  format.json  manufacturer.json  mount.json  negativesize.json  shutterspeed.json
schema/migrations/: 0001_initial.py  0001_squashed_0133_auto_20220524_2034.py  0001_squashed_0136_auto_20240107_2115.py  0002_alter_filter_colour.py  0002_auto_20190812_2224.py  0002_auto_20190813_1411.py  0002_auto_20220526_1145.py  0002_data.py  0003_alter_camera_unique_together_and_more.py  0003_auto_20190812_2249.py  0003_auto_20190819_2014.py  0003_shutter_speeds.py  0004_auto_20190812_2314.py  0004_auto_20190830_1300.py  0004_manufacturers.py  0004_shutter_speeds.py  0005_auto_20190813_1055.py  0005_auto_20190830_1421.py  0005_formats.py  0006_auto_20190813_1250.py  0006_auto_20190830_1427.py  0006_negative_sizes.py  0007_auto_20190813_1324.py  0007_auto_20190830_1453.py  0007_mounts.py  0008_auto_20190813_1334.py  0008_auto_20190905_1416.py  0008_filmstocks.py  0008_shutter_speeds.py  0009_auto_20190813_1338.py  0009_auto_20190901_2033.py  0009_auto_20191015_0926.py  0010_auto_20190813_1411.py  0010_auto_20190813_2017.py  0010_auto_20191016_1023.py  0010_data.py  0011_auto_20190813_1411.py  0011_auto_20191016_1035.py  0011_data.py  0012_auto_20191016_1106.py  (+169 more)
schema/templates/: 400.html  403.html  404.html  500.html  base.html  base_generic.html  create.html  detail.html  docs.html  error.html  favicon.html  footer.html  heading.html  help_text.html  history.html  index.html  list.html  manufacturer.html  nav.html  print.html  search.html  sharing.html  stats.html  tag-detail.html  tag-list.html  td.html  td2.html  td3.html  update.html
schema/templatetags/: boolicontag.py  formatting.py  model_name.py  td.py  titledescription.py  yesnoicon.py
templates/: signup.html
templates/django_registration/: activation_complete.html  activation_email_body.txt  activation_email_subject.txt  activation_failed.html  registration_closed.html  registration_complete.html  registration_form.html
templates/iommi/: iommi_base.html
templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
ui/: apps.py  detail.py  forms.py  pages.py  tables.py  urls.py
ui/templates/: footer.html  heading.html  index.html  iommi_base.html  manufacturer.html  nav.html  search.html  stats.html
ui/templatetags/: formatting.py  model_name.py  version.py
(+133 files in other folders)
