[tool.poetry]
name = "camerahub"
version = "0.0.0"
description = "App for cataloguing vintage cameras, lenses, films, negatives & prints"
authors = ["Jonathan Gazeley <camerahub@jonathangazeley.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://camerahub.info/"
repository = "https://github.com/camerahub/camerahub"
packages = [
    { include = "camerahub" },
    { include = "schema" },
]
include = [
    "static",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3"
pytz = "*"
django-money = "^3"
django-choices = "^1.7"
django-currentuser = "^0.5"
uWSGI = "^2"
django-tables2 = "^2.4"
django-crispy-forms = "^1.14"
django-autosequence = "^0"
django-sendgrid-v5 = "*"
django-registration = "^3.0"
django-fullurl = "^1"
django-filter = "*"
awesome-slugify = "^1.6.5"
django-watson = "^1.6"
django-taggit = "^2"
django-simple-history = "^3"
django-versatileimagefield = "^2"
numpy = "^1.23"
django-social-share = "^2"
django-countries = "^7"
django3-collectionfield = "^1"
django-autocomplete-light = "^3.9"
django-bootstrap-datepicker-plus = "^4"
django-geoposition-2 = "^0.3.11"
django-leaflet = "^0.28"
djangorestframework = "^3.14"
django-dbbackup = "^3"
django-star-ratings = "^0.9"
drf-generators = "^0.5"
pyyaml = "^6"
uritemplate = "^4"
drf-multiple-serializer = "^0.2"
django-health-check = "^3.17"
django-settings-export = "^1.2"
platformdirs = "^2.5"
django-colorfield = "^0.7"
django-prometheus = "^2.2"
psycopg2 = "^2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint-django = "^2.5.3"
autopep8 = "^2.0.0"
pylint = "^2"

[tool.poetry.extras]
pgsql = ["psycopg2"]

[tool.poetry.group.dev.dependencies]
sphinx = "^6.2.1"
myst-parser = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
