[tool.poetry]
name = "camerahub"
version = "0.0.0"
description = "App for cataloguing vintage cameras, lenses, films, negatives & prints"
authors = ["Jonathan Gazeley <camerahub@jonathangazeley.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://camerahub.info/"
repository = "https://github.com/camerahub/camerahub"
packages = [
    { include = "camerahub" },
    { include = "schema" },
]
include = [
    "static",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.1"
iommi = "^6.4.0"
pytz = "*"
django-money = "^3.4.1"
django-choices = "^2.0.0"
django-currentuser = "^0.6.1"
uWSGI = "^2"
django-crispy-forms = "^1"
django-autosequence = "^0.8.0"
django-registration = "^3.4"
django-fullurl = "^1"
django-filter = "*"
awesome-slugify = "^1.6.5"
django-watson = "^1.6"
django-taggit = "^5.0.1"
django-versatileimagefield = "^3.0"
numpy = "^1.26.3"
django-social-share = "^2"
django-countries = "^7.5.1"
django-autocomplete-light = "^3.9"
django-bootstrap-datepicker-plus = "^5"
django-geoposition-2 = "^0.4.0"
django-leaflet = "^0"
djangorestframework = "^3"
django-dbbackup = "^4"
drf-generators = "^0.5"
pyyaml = "^6"
uritemplate = "^4"
drf-multiple-serializer = "^0.2"
django-health-check = "^3"
django-settings-export = "^1.2"
platformdirs = "^4"
django-colorfield = "^0.11.0"
django-prometheus = "^2"
psycopg2 = "^2"

[tool.poetry.dev-dependencies]
pytest = "^7"
pylint-django = "^2"
autopep8 = "^2.0.4"
pylint = "^3.0.3"

[tool.poetry.extras]
pgsql = ["psycopg2"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
