# Type of python distribution
[bdist_wheel]
universal=0

[metadata]
# App name
name = CameraHub
# Who made it?
author = Jonathan Gazeley
# Do I really need to explain the following?
author_email = camerahub@jonathangazeley.com
# The short description of your app
summary = App for cataloguing vintage cameras, lenses, films, negatives & prints
# License type
license = MIT
# Which file contains the long description?
description-file = README.md
description-content-type = text/markdown
# Where can I access the project?
home-page = https://github.com/djjudas21/camerahub
# Which version of Python does it need to run?
python_requires = >=3.6
# How do you classify your app? https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Environment :: Other Environment
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6

# Automatically find root package
[options]
packages = find:

# Which files that are not source code do you want to deploy?
[files]
data_files =
    static       = static/*
    static/icons = static/icons/*

# Where does your app start?
[entry_points]
console_scripts =
    automabot = your_package.__main__:main
